correction in pdf

--- a/src/app/pages/newintake/my-newintake/my-newintake.component.html
+++ b/src/app/pages/newintake/my-newintake/my-newintake.component.html
@@ -244,7 +244,7 @@
          
 
           <div class="text-right big-bot-space right-mspace-15">
-            <button type="button" class="btn-pri" (click)="downloadCasePdf()"> Download </button>
+            <button type="button" class="btn-pri" (click)="collectivePdfCreator()"> Download </button>
 
           </div>
         </div>
