--- a/src/app/pages/newintake/my-newintake/intake-complaint-type/pdf-peace-order-appeal-letter/pdf-peace-order-appeal-letter.component.html
+++ b/src/app/pages/newintake/my-newintake/intake-complaint-type/pdf-peace-order-appeal-letter/pdf-peace-order-appeal-letter.component.html
@@ -190,7 +190,7 @@
 
         <div class="col-sm-12">
           Re: Youth Name: {{getMaltreatorName()}}
-          <br> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; Youth ID#:
+          <br> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp; Youth ID#: {{getPersonID('Alleged Maltreator')}}
           <br> &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Request for Peace Order Complaint Appeal
         </div>
 
